--- a/top-page5.css
+++ b/top-page5.css
@@ -7,7 +7,13 @@ body {
   color: #333;
   font-size: 15px;
   line-height: 2;
-  zoom: 0.9;
+  zoom: 0.2;
+}
+
+@media screen and [max-width: 480px] {
+  body {
+    zoom: 0.05;
+  }
 }
 
 p,h1,h2,h3,h4,h5,h6 {
