--- a/top-page5.css
+++ b/top-page5.css
@@ -368,6 +368,13 @@ p.im_en {
   text-orientation: center;
 }
 
+@media screen and [max-width: 480px] {
+  p.im_en {
+  writing-mode: vertical-rl;
+  text-orientation: center;
+  }
+}
+
 p#im_mlit {
   font-weight: bold;
   writing-mode: vertical-rl;
